QPP/src/main/java/br/ufc/quixada/qxd0025/chulapa_compiler/frontend/QPPParser.java
// Generated from /home/flycher/Dropbox/VScode/compiladores/QPP/src/main/java/br/ufc/quixada/qxd0025/chulapa_compiler/antlr4/QPP.g4 by ANTLR 4.7.2
package br.ufc.quixada.qxd0025.chulapa_compiler.frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTL=1, FLOATL=2, CHARL=3, STRL=4, LPAREN=5, RPAREN=6, LBRACE=7, RBRACE=8, 
		ARROW=9, DOT=10, INCR=11, DECR=12, NOT=13, AMPER=14, DIV=15, TIMES=16, 
		MOD=17, PLUS=18, MINUS=19, LT=20, GT=21, LEQ=22, GEQ=23, NEQ=24, EQ=25, 
		AND=26, OR=27, ATRIB=28, IF=29, ELSE=30, WHILE=31, BREAK=32, RETURN=33, 
		STRUCT=34, PUBLIC=35, PROTECTED=36, PRIVATE=37, STATIC=38, THIS=39, CONST=40, 
		VOID=41, INT=42, FLOAT=43, CHAR=44, BOOL=45, TRUE=46, FALSE=47, COMMA=48, 
		COLON=49, SEMI=50, DBLCOL=51, LSHIFT=52, RSHIFT=53, STDCIN=54, STDCOUT=55, 
		STDENDL=56, ID=57, DIR=58, COMMENTBLOCK=59, COMMENTLINE=60, WHITESPACE=61;
	public static final int
		RULE_programa = 0, RULE_definicao = 1, RULE_estrutura = 2, RULE_estrutura_acesso = 3, 
		RULE_membro = 4, RULE_variavel = 5, RULE_construtor = 6, RULE_metodo = 7, 
		RULE_funcao = 8, RULE_funcao_cabecalho = 9, RULE_parametros_formais = 10, 
		RULE_tipo = 11, RULE_tipo_nome = 12, RULE_qualificador = 13, RULE_decorador = 14, 
		RULE_bloco = 15, RULE_comando = 16, RULE_selecao = 17, RULE_selecao_senao = 18, 
		RULE_repeticao = 19, RULE_atribuicao = 20, RULE_retorno = 21, RULE_entrada = 22, 
		RULE_saida = 23, RULE_expressao_comando = 24, RULE_expressao = 25, RULE_operador_binario = 26, 
		RULE_operador_unario = 27, RULE_nome = 28, RULE_nome_lista = 29, RULE_nome_lista_ = 30, 
		RULE_parametros_reais = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "definicao", "estrutura", "estrutura_acesso", "membro", "variavel", 
			"construtor", "metodo", "funcao", "funcao_cabecalho", "parametros_formais", 
			"tipo", "tipo_nome", "qualificador", "decorador", "bloco", "comando", 
			"selecao", "selecao_senao", "repeticao", "atribuicao", "retorno", "entrada", 
			"saida", "expressao_comando", "expressao", "operador_binario", "operador_unario", 
			"nome", "nome_lista", "nome_lista_", "parametros_reais"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'->'", "'.'", 
			"'++'", "'--'", "'!'", "'&'", "'/'", "'*'", "'%'", "'+'", "'-'", "'<'", 
			"'>'", "'<='", "'>='", "'!='", "'=='", "'&&'", "'||'", "'='", "'if'", 
			"'else'", "'while'", "'break'", "'return'", "'struct'", "'public'", "'protected'", 
			"'private'", "'static'", "'this'", "'const'", "'void'", "'int'", "'float'", 
			"'char'", "'bool'", "'true'", "'false'", "','", "':'", "';'", "'::'", 
			"'<<'", "'>>'", "'std::cin'", "'std::cout'", "'std::endl'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTL", "FLOATL", "CHARL", "STRL", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "ARROW", "DOT", "INCR", "DECR", "NOT", "AMPER", "DIV", "TIMES", 
			"MOD", "PLUS", "MINUS", "LT", "GT", "LEQ", "GEQ", "NEQ", "EQ", "AND", 
			"OR", "ATRIB", "IF", "ELSE", "WHILE", "BREAK", "RETURN", "STRUCT", "PUBLIC", 
			"PROTECTED", "PRIVATE", "STATIC", "THIS", "CONST", "VOID", "INT", "FLOAT", 
			"CHAR", "BOOL", "TRUE", "FALSE", "COMMA", "COLON", "SEMI", "DBLCOL", 
			"LSHIFT", "RSHIFT", "STDCIN", "STDCOUT", "STDENDL", "ID", "DIR", "COMMENTBLOCK", 
			"COMMENTLINE", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(QPPParser.EOF, 0); }
		public List<DefinicaoContext> definicao() {
			return getRuleContexts(DefinicaoContext.class);
		}
		public DefinicaoContext definicao(int i) {
			return getRuleContext(DefinicaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << CONST) | (1L << VOID) | (1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL) | (1L << ID))) != 0)) {
				{
				{
				setState(64);
				definicao();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicaoContext extends ParserRuleContext {
		public DefinicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicao; }
	 
		public DefinicaoContext() { }
		public void copyFrom(DefinicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefinicaoFuncaoContext extends DefinicaoContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public DefinicaoFuncaoContext(DefinicaoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitDefinicaoFuncao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefinicaoEstruturaContext extends DefinicaoContext {
		public EstruturaContext estrutura() {
			return getRuleContext(EstruturaContext.class,0);
		}
		public DefinicaoEstruturaContext(DefinicaoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitDefinicaoEstrutura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicaoContext definicao() throws RecognitionException {
		DefinicaoContext _localctx = new DefinicaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicao);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
			case VOID:
			case INT:
			case FLOAT:
			case CHAR:
			case BOOL:
			case ID:
				_localctx = new DefinicaoFuncaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				funcao();
				}
				break;
			case STRUCT:
				_localctx = new DefinicaoEstruturaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				estrutura();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstruturaContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(QPPParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(QPPParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(QPPParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(QPPParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(QPPParser.SEMI, 0); }
		public List<Estrutura_acessoContext> estrutura_acesso() {
			return getRuleContexts(Estrutura_acessoContext.class);
		}
		public Estrutura_acessoContext estrutura_acesso(int i) {
			return getRuleContext(Estrutura_acessoContext.class,i);
		}
		public EstruturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitEstrutura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstruturaContext estrutura() throws RecognitionException {
		EstruturaContext _localctx = new EstruturaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_estrutura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(STRUCT);
			setState(77);
			match(ID);
			setState(78);
			match(LBRACE);
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				estrutura_acesso();
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PROTECTED) | (1L << PRIVATE))) != 0) );
			setState(84);
			match(RBRACE);
			setState(85);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Estrutura_acessoContext extends ParserRuleContext {
		public Estrutura_acessoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura_acesso; }
	 
		public Estrutura_acessoContext() { }
		public void copyFrom(Estrutura_acessoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EstruturaAcessoPrivateContext extends Estrutura_acessoContext {
		public TerminalNode PRIVATE() { return getToken(QPPParser.PRIVATE, 0); }
		public TerminalNode COLON() { return getToken(QPPParser.COLON, 0); }
		public List<MembroContext> membro() {
			return getRuleContexts(MembroContext.class);
		}
		public MembroContext membro(int i) {
			return getRuleContext(MembroContext.class,i);
		}
		public EstruturaAcessoPrivateContext(Estrutura_acessoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitEstruturaAcessoPrivate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EstruturaAcessoPublicContext extends Estrutura_acessoContext {
		public TerminalNode PUBLIC() { return getToken(QPPParser.PUBLIC, 0); }
		public TerminalNode COLON() { return getToken(QPPParser.COLON, 0); }
		public List<MembroContext> membro() {
			return getRuleContexts(MembroContext.class);
		}
		public MembroContext membro(int i) {
			return getRuleContext(MembroContext.class,i);
		}
		public EstruturaAcessoPublicContext(Estrutura_acessoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitEstruturaAcessoPublic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EstruturaAcessoProtectedContext extends Estrutura_acessoContext {
		public TerminalNode PROTECTED() { return getToken(QPPParser.PROTECTED, 0); }
		public TerminalNode COLON() { return getToken(QPPParser.COLON, 0); }
		public List<MembroContext> membro() {
			return getRuleContexts(MembroContext.class);
		}
		public MembroContext membro(int i) {
			return getRuleContext(MembroContext.class,i);
		}
		public EstruturaAcessoProtectedContext(Estrutura_acessoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitEstruturaAcessoProtected(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Estrutura_acessoContext estrutura_acesso() throws RecognitionException {
		Estrutura_acessoContext _localctx = new Estrutura_acessoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_estrutura_acesso);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PUBLIC:
				_localctx = new EstruturaAcessoPublicContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(PUBLIC);
				setState(88);
				match(COLON);
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(89);
					membro();
					}
					}
					setState(92); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << CONST) | (1L << VOID) | (1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL) | (1L << ID))) != 0) );
				}
				break;
			case PROTECTED:
				_localctx = new EstruturaAcessoProtectedContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(PROTECTED);
				setState(95);
				match(COLON);
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(96);
					membro();
					}
					}
					setState(99); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << CONST) | (1L << VOID) | (1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL) | (1L << ID))) != 0) );
				}
				break;
			case PRIVATE:
				_localctx = new EstruturaAcessoPrivateContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				match(PRIVATE);
				setState(102);
				match(COLON);
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(103);
					membro();
					}
					}
					setState(106); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STATIC) | (1L << CONST) | (1L << VOID) | (1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL) | (1L << ID))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MembroContext extends ParserRuleContext {
		public MembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_membro; }
	 
		public MembroContext() { }
		public void copyFrom(MembroContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MembroConstrutorContext extends MembroContext {
		public ConstrutorContext construtor() {
			return getRuleContext(ConstrutorContext.class,0);
		}
		public MembroConstrutorContext(MembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitMembroConstrutor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MembroStaticMetodoContext extends MembroContext {
		public TerminalNode STATIC() { return getToken(QPPParser.STATIC, 0); }
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public MembroStaticMetodoContext(MembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitMembroStaticMetodo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MembroStaticVariavelContext extends MembroContext {
		public TerminalNode STATIC() { return getToken(QPPParser.STATIC, 0); }
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public MembroStaticVariavelContext(MembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitMembroStaticVariavel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MembroMetodoContext extends MembroContext {
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public MembroMetodoContext(MembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitMembroMetodo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MembroVariavelContext extends MembroContext {
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public MembroVariavelContext(MembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitMembroVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MembroContext membro() throws RecognitionException {
		MembroContext _localctx = new MembroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_membro);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new MembroConstrutorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				construtor();
				}
				break;
			case 2:
				_localctx = new MembroVariavelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				variavel();
				}
				break;
			case 3:
				_localctx = new MembroMetodoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				metodo();
				}
				break;
			case 4:
				_localctx = new MembroStaticVariavelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				match(STATIC);
				setState(114);
				variavel();
				}
				break;
			case 5:
				_localctx = new MembroStaticMetodoContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				match(STATIC);
				setState(116);
				metodo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariavelContext extends ParserRuleContext {
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
	 
		public VariavelContext() { }
		public void copyFrom(VariavelContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariavelCriacaoContext extends VariavelContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(QPPParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(QPPParser.SEMI, 0); }
		public VariavelCriacaoContext(VariavelContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitVariavelCriacao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariavelAtribuicaoContext extends VariavelContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(QPPParser.ID, 0); }
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public VariavelAtribuicaoContext(VariavelContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitVariavelAtribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variavel);
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new VariavelCriacaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				tipo();
				setState(120);
				match(ID);
				setState(121);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new VariavelAtribuicaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				tipo();
				setState(124);
				match(ID);
				setState(125);
				atribuicao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrutorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QPPParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(QPPParser.LPAREN, 0); }
		public Parametros_formaisContext parametros_formais() {
			return getRuleContext(Parametros_formaisContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(QPPParser.RPAREN, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ConstrutorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construtor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QPPVisitor ) return ((QPPVisitor<? extends T>)visitor).visitConstrutor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstrutorContext construtor() throws RecognitionException {
		ConstrutorContext _localctx = new ConstrutorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_construtor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(ID);
			setState(130);
			match(LPAREN);
			setState(131);
			parametros_formais();
			setState(132);
			match(RPAREN);
			setState(133);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
